--- a/prototype.ipynb
+++ b/prototype.ipynb
@@ -306,7 +306,7 @@
     "import os\n",
     "\n",
     "api_key = os.environ.get(\"OPENAI_API_KEY\")\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"sk-Your key\"\n",
     "# set up openai api key\n",
     "openai_api_key = os.environ.get('OPENAI_API_KEY')"
    ]
