--- a/prototype.ipynb
+++ b/prototype.ipynb
@@ -811,7 +811,7 @@
    ],
    "source": [
     "# Question\n",
-    "query = \"write a resignation letter for me, my last day is this Friday, and I'm happy to leave this shithole\"\n",
+    "query = \"write a resignation letter for me\"\n",
     "llm_response = qa_chain(query)\n",
     "process_llm_response(llm_response)"
    ]
